--- a/src/main/resources/templates/thymeleaf1.html
+++ b/src/main/resources/templates/thymeleaf1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html  th:lang="${#locale.language}"  xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <title>Title</title>
+    <title>Thymeleaf String</title>
     <!-- Turkce karakter -->
     <meta charset="utf-8">
 
