--- a/src/main/resources/templates/thymeleaf5.html
+++ b/src/main/resources/templates/thymeleaf5.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html  th:lang="${#locale.language}"  xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <title>Model</title>
+    <title>Listem</title>
     <!-- Turkce karakter -->
     <meta charset="utf-8">
 
@@ -37,9 +37,34 @@
 
 <body class="container">
     <!-- start codes -->
-    <h1 class="text-primary">Thymeleaf1</h1>
-    <p th:text="${key_text}"></p>
+    <h1 class="text-primary">Thymeleaf5</h1>
+    <p th:text="${key_list}"  class="text-center text-warning"></p>
 
+    <hr>
+   <!-- table.table.table-striped.table-hover>(thead>tr>th*3)+(tbody>tr>td*3)-->
+    <table class="table table-striped table-hover table-primary">
+        <!--thead start-->
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>ADI</th>
+            <th>SOYADI</th>
+        </tr>
+        </thead>
+
+        <!--tbody-->
+        <tbody>
+        <tr th:each="takma_ad:${key_list}" class="bg-dark">
+            <td th:text="${takma_ad.personId}" ></td>
+            <td th:text="${takma_ad.personName}" ></td>
+            <td th:text="${takma_ad.personSurname}" ></td>
+        </tr>
+
+        </tbody>
+    </table>
+
+
+<!--bootstrap table : adi,soyadi,tc,hescode-->
 
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
