--- a/src/main/resources/templates/thymeleaf13.html
+++ b/src/main/resources/templates/thymeleaf13.html
@@ -40,17 +40,46 @@
     <h1 class="text-primary">Thymeleaf13</h1>
     
     <div class="alert alert-success" role="alert">
-        <button type="button" class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#modelId">
+        <a th:action="@{/computer/save}"  type="button" class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#modelId">
             Create
-        </button>
-        <button class="btn btn-secondary mt-1">List</button>
+        </a>
+
+        <a th:action="@{/computer/save}" type="button" class="btn btn-secondary btn-md" data-bs-toggle="modal" data-bs-target="#modelIdList">
+            List
+        </a>
     </div>
 
 
-    <!-- Button trigger modal -->
+    <!--list-->
+    <table class="table table-hover table-striped table-responsive">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Adı</th>
+            <th>Fiyatı</th>
+            <th>MACID</th>
+            <th>Tarih</th>
+            <th>Sil</th>
+            <th>Güncelle</th>
+            <th>Göster</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="temp:${form_list}">
+            <td th:text="${temp.computerId}"></td>
+            <td th:text="${temp.computerName}"></td>
+            <td th:text="${temp.computerPrice}"></td>
+            <td th:text="${temp.computerMacId}"></td>
+            <td th:text="${temp.createdDate}"></td>
+            <td><button class="btn btn-danger">Delete</button> </td>
+            <td><button class="btn btn-success">Update</button> </td>
+            <td><button class="btn btn-primary">Show</button> </td>
+        </tr>
+        </tbody>
+    </table>
 
 
-    <!-- Modal -->
+    <!-- Modal Create -->
     <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -64,16 +93,16 @@
                             <div class="row">
 
                                 <!--computer name-->
-                                <div th:text="#{computer_computerName}"  class="col-md-2 mt-3 "></div>
-                                <div class="col-md-10">
+                                <div th:text="#{computer_computerName}"  class="col-md-3 mt-3 "></div>
+                                <div class="col-md-9">
                                     <input type="text" th:field="*{computerName}" class="form-control" />
                                     <div  class="text-danger"  th:if="${#fields.hasErrors('computerName')}" th:errors ="*{computerName}" />
                                 </div>
 
 
                                 <!--computer price-->
-                                <div th:text="#{computer_computerPrice}"  class="col-md-2"></div>
-                                <div class="col-md-10">
+                                <div th:text="#{computer_computerPrice}"  class="col-md-3"></div>
+                                <div class="col-md-9">
                                     <input type="text" th:field="*{computerPrice}" class="form-control mt-3 "  />
                                     <div  class="text-danger"  th:if="${#fields.hasErrors('computerPrice')}" th:errors ="*{computerPrice}" />
                                 </div>
@@ -95,38 +124,46 @@
         </div>
     </div>
 
-    
-    
-    <table class="table table-hover table-striped table-responsive">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Adı</th>
-                <th>Fiyatı</th>
-                <th>MACID</th>
-                <th>Tarih</th>
-                <th>Sil</th>
-                <th>Güncelle</th>
-                <th>Göster</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="temp:${form_list}">
-                <td th:text="${temp.computerId}"></td>
-                <td th:text="${temp.computerName}"></td>
-                <td th:text="${temp.computerPrice}"></td>
-                <td th:text="${temp.computerMacId}"></td>
-                <td th:text="${temp.createdDate}"></td>
-                <td><button class="btn btn-danger">Delete</button> </td>
-                <td><button class="btn btn-success">Update</button> </td>
-                <td><button class="btn btn-primary">Show</button> </td>
-            </tr>
-        </tbody>
-    </table>
 
-
-
-
+    <!-- Modal List -->
+    <div class="modal fade bd-example-modal-lg" id="modelIdList" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog" role="document" >
+            <div class="modal-content" style="width: 200%">
+                <div class="modal-header">
+                    <h5 class="modal-title">Bilgisayar Kaydet</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                    <table class="table table-hover table-striped table-responsive">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Adı</th>
+                            <th>Fiyatı</th>
+                            <th>MACID</th>
+                            <th>Tarih</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="temp:${form_list}">
+                            <td th:text="${temp.computerId}"></td>
+                            <td th:text="${temp.computerName}"></td>
+                            <td th:text="${temp.computerPrice}"></td>
+                            <td th:text="${temp.computerMacId}"></td>
+                            <td th:text="${temp.createdDate}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- ends codes -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
