--- a/src/main/resources/templates/Spring_Mvc_Data_Form.html
+++ b/src/main/resources/templates/Spring_Mvc_Data_Form.html
@@ -47,6 +47,7 @@
         <a th:action="@{/computer/save}" type="button" class="btn btn-secondary btn-md" data-bs-toggle="modal" data-bs-target="#modelIdList">
             List
         </a>
+        <p th:text="${delete_key}" class="text-danger"></p>
     </div>
 
 
@@ -71,12 +72,66 @@
             <td th:text="${temp.computerPrice}"></td>
             <td th:text="${temp.computerMacId}"></td>
             <td th:text="${temp.createdDate}"></td>
-            <td><button class="btn btn-danger">Delete</button> </td>
+
+            <td><a th:href="@{/computer/delete/{id}(id=${temp.computerId})}" class="btn btn-danger">Delete</a> </td>
             <td><button class="btn btn-success">Update</button> </td>
-            <td><button class="btn btn-primary">Show</button> </td>
+            <td> <a   type="button" class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#modelShowId">
+                Show
+            </a></td>
         </tr>
         </tbody>
     </table>
+
+
+
+    <!-- Modal show -->
+    <div class="modal fade" id="modelShowId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title display-5">Form Kaydet</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <table class="table table-hover table-striped table-responsive">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Adı</th>
+                            <th>Fiyatı</th>
+                            <th>MACID</th>
+                            <th>Tarih</th>
+                            <th>Sil</th>
+                            <th>Güncelle</th>
+                            <th>Göster</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr >
+                            <td >Data1</td>
+                            <td >Data1</td>
+                            <td >Data1</td>
+                            <td >Data1</td>
+                            <td >Data1</td>
+
+<!--                            <td><a th:href="@{/computer/{id}(id=${temp.computerId})}" class="btn btn-primary">Show</a> </td>-->
+
+<!--                            <td><a th:href="@{/computer/delete/{id}(id=${temp.computerId})}" class="btn btn-danger">Delete</a> </td>-->
+<!--                            <td><button class="btn btn-success">Update</button> </td>-->
+<!--                            <td> <a   type="button" class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#modelShowId">-->
+<!--                                Show-->
+<!--                            </a></td>-->
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Modal Create -->
@@ -84,7 +139,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Bilgisayar Kaydet</h5>
+                    <h5 class="modal-title display-5">Form Kaydet</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -94,32 +149,31 @@
 
                                 <!--computer name-->
                                 <div th:text="#{computer_computerName}"  class="col-md-3 mt-3 "></div>
-                                <div class="col-md-9">
+                                <div class="col-md-9 mt-3">
                                     <input type="text" th:field="*{computerName}" class="form-control" />
                                     <div  class="text-danger"  th:if="${#fields.hasErrors('computerName')}" th:errors ="*{computerName}" />
                                 </div>
 
 
                                 <!--computer price-->
-                                <div th:text="#{computer_computerPrice}"  class="col-md-3"></div>
-                                <div class="col-md-9">
-                                    <input type="text" th:field="*{computerPrice}" class="form-control mt-3 "  />
+                                <div th:text="#{computer_computerPrice}"  class="col-md-3  mt-3 mb-5 "></div>
+                                <div class="col-md-9  mt-3 mb-5 ">
+                                    <input type="text" th:field="*{computerPrice}" class="form-control "  />
                                     <div  class="text-danger"  th:if="${#fields.hasErrors('computerPrice')}" th:errors ="*{computerPrice}" />
                                 </div>
 
-                                <div class="col-md-2"></div>
-                                <div class="col-md-10">
-                                    <button th:text="#{register_reset}" type="reset" class="btn btn-danger btn-sm"></button>
-                                    <button th:text="#{register_submit}" type="submit" class="btn btn-primary btn-sm"></button>
+
+
+                                <div class="modal-footer">
+                                    <button th:text="#{register_reset}"type="reset" class="btn btn-danger  btn-sm"></button>
+                                    <button th:text="#{register_submit}" type="submit" class="btn btn-primary  btn-sm"></button>
+                                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">&times;</button>
                                 </div>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
-                </div>
+
             </div>
         </div>
     </div>
@@ -158,8 +212,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
                 </div>
             </div>
         </div>
